# smart-watch

./: .gitignore
Firmware/: platformio.ini
Firmware/lib/: lv_conf.h
Firmware/lib/TFT_eSPI-master/: User_Setup.h
Firmware/log/: 2024-02-27.md
Firmware/src/: ble_keyboard.cpp  ble_keyboard.h  button.cpp  button.h  display.cpp  display.h  main.cpp  main.h  step_count.cpp  step_count.h  web_get.cpp  web_get.h
Firmware/src/ui_image_src/: ui_img_about_png.c  ui_img_again2_png.c  ui_img_aqi_png.c  ui_img_calendar_png.c  ui_img_clock_png.c  ui_img_flash2_png.c  ui_img_flash3_png.c  ui_img_hum_png.c  ui_img_location2_png.c  ui_img_netease_png.c  ui_img_next2_png.c  ui_img_next3_png.c  ui_img_pause_png.c  ui_img_prior.c  ui_img_remote_png.c  ui_img_step_png.c  ui_img_stopwatch_png.c  ui_img_temp2_png.c  ui_img_wea_png.c  ui_img_yogurt_png.c
Firmware/src/ui_pages/: ui.cpp  ui.h  ui_ScreenAbout.cpp  ui_ScreenCalendar.cpp  (+6 more)
UI2/: CMakeLists.txt  SquareLine_Project.sll  SquareLine_Project.spj  filelist.txt  ui.c  ui.h
UI2/SquareLine_Project/: lv_conf.h  lv_drv_conf.h
UI2/SquareLine_Project/SquareLine_Project/: CMakeLists.txt  lv_conf.h
UI2/images/: ui_img_aqi_png.c  ui_img_flash2_png.c  ui_img_flash3_png.c  ui_img_hum_png.c  ui_img_location2_png.c  ui_img_step_png.c  ui_img_temp2_png.c  ui_img_wea_png.c
UI2/screens/: ui_ScreenHome.c  ui_ScreenMenu.c  ui_ScreenWeather.c
log/: 2023-10-31.md  2023-11-01.md  2024-02-28.md  2024-02-29.md  2024-03-01.md  2024-03-04.md  2024-03-05.md  2024-03-07.md  2024-03-08.md  2024-03-11.md  2024-03-12.md  2024-03-21.md
